# rust_book

01_hello_world/: Cargo.toml
01_hello_world/src/: main.rs
02_guessing_game/: Cargo.toml
02_guessing_game/src/: main.rs
03_concepts/: Cargo.toml
03_concepts/ch3_ex/: Cargo.toml
03_concepts/conditionals/: Cargo.toml
03_concepts/src/: main.rs
04_ownership/: Cargo.toml
04_ownership/ref_borrowing/: Cargo.toml
04_ownership/slices/: Cargo.toml
04_ownership/src/: main.rs
05_structs/defining_structs/: Cargo.toml
05_structs/rectangles/: Cargo.toml
06_enums/defining_enums/: Cargo.toml
06_enums/enum_if_let_control_flow/: Cargo.toml
06_enums/enum_match_control/: Cargo.toml
07_modules/restaurant/: Cargo.toml
07_modules/use_conflicts/: Cargo.toml
08_collections/exercises/: Cargo.toml
08_collections/hash_maps/: Cargo.toml
08_collections/strings/: Cargo.toml
08_collections/vectors/: Cargo.toml
09_error_handling/: Cargo.toml
09_error_handling/src/: main.rs  propogating_errors.rs  types_enforcing_values.rs
10_generic_types_traits_and_lifetimes/: Cargo.toml
10_generic_types_traits_and_lifetimes/src/: generics.rs  lifetimes.rs  main.rs  traits.rs
11_automated_testing/: Cargo.toml
11_automated_testing/src/: lib.rs
12_minigrep/: Cargo.toml
13_closures_iterators/: Cargo.toml
14_crates_and_cargo/: Cargo.toml
14_crates_and_cargo/src/: main.rs
15_smart_pointers/: Cargo.toml
16_concurrency/: Cargo.toml
17_oop/: Cargo.toml
18_patterns_and_matching/: Cargo.toml
19_advanced_features/: Cargo.toml
_rustlings/: quiz1.rs
(+106 files in other folders)
